--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,235 @@
-flask
-jinja2
-python-dotenv
-torch
-transformers
-FlagEmbedding          # BGE-M3 포함
-qdrant-client
-pillow
-python-docx
-python-pptx
-openpyxl
-PyPDF2
-paddleocr             # OCR
-opencv-python-headless
-numpy
-scikit-learn
-tqdm
-# (필요시: paddlepaddle-gpu==2.5.2.post112)  # GPU 사용시
-# 기타 TableOCR 모델 설치는 선택사항(후속)
+accelerate==1.9.0
+acres==0.5.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==4.0.3
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+bitsandbytes==0.46.1
+blinker==1.9.0
+build==1.2.2.post1
+cachetools==5.5.2
+cbor==1.0.0
+certifi==2025.6.15
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+chromadb==1.0.15
+ci-info==0.3.0
+click==8.2.1
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.9.0
+configobj==5.0.9
+configparser==7.2.0
+cryptography==45.0.5
+cssselect==1.3.0
+cssutils==2.11.1
+dataclasses-json==0.6.7
+datasets==4.0.0
+decorator==5.2.1
+dill==0.3.8
+distro==1.9.0
+durationpy==0.10
+einops==0.8.1
+et_xmlfile==2.0.0
+etelemetry==0.3.1
+exceptiongroup==1.3.0
+filelock==3.18.0
+FlagEmbedding==1.3.5
+Flask==3.1.1
+flatbuffers==25.2.10
+frozenlist==1.7.0
+fsspec==2025.3.0
+ftfy==6.3.1
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+GPUtil==1.4.0
+greenlet==3.2.3
+grpcio==1.73.1
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.33.4
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.10
+ijson==3.4.0
+imagesize==1.4.1
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+inscriptis==2.6.0
+ir_datasets==0.5.11
+isodate==0.7.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kubernetes==33.1.0
+langchain==0.3.26
+langchain-community==0.3.27
+langchain-core==0.3.72
+langchain-ollama==0.3.6
+langchain-openai==0.3.28
+langchain-text-splitters==0.3.8
+langsmith==0.4.8
+looseversion==1.3.0
+lxml==6.0.0
+lz4==4.4.4
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+mmh3==5.2.0
+more-itertools==10.7.0
+mpmath==1.3.0
+multidict==6.6.3
+multiprocess==0.70.16
+mypy_extensions==1.1.0
+networkx==3.4.2
+nibabel==5.3.2
+nipype==1.10.0
+numpy==2.2.6
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cudnn-cu11==8.9.4.19
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.3.0.86
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusparse-cu11==11.7.5.86
+oauthlib==3.3.1
+ollama==0.5.1
+onnxruntime==1.22.1
+openai==1.97.1
+opencv-contrib-python==4.10.0.84
+opencv-python-headless==4.12.0.88
+openpyxl==3.1.5
+opentelemetry-api==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
+opt-einsum==3.3.0
+orjson==3.11.0
+overrides==7.7.0
+packaging==25.0
+paddleocr==3.1.0
+paddlepaddle-gpu==3.1.0
+paddlex==3.1.3
+pandas==2.3.1
+pathlib==1.0.1
+pdfminer.six==20250506
+pdfplumber==0.11.7
+peft==0.16.0
+pillow==11.2.1
+portalocker==3.2.0
+posthog==5.4.0
+premailer==3.10.0
+prettytable==3.16.0
+propcache==0.3.2
+protobuf==6.31.1
+prov==2.1.1
+psutil==7.0.0
+puremagic==1.30
+py-cpuinfo==9.0.0
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.2
+pyclipper==1.3.0.post6
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pydot==4.0.1
+Pygments==2.19.2
+PyMuPDF==1.26.3
+pyparsing==3.2.3
+PyPDF2==3.0.1
+pypdfium2==4.30.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.1.1
+python-pptx==1.0.2
+pytz==2025.2
+pywin32==311
+pyxnat==1.6.3
+PyYAML==6.0.2
+qdrant-client==1.15.0
+rdflib==7.1.4
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.1.0
+rpds-py==0.26.0
+rsa==4.9.1
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.15.3
+sentence-transformers==5.0.0
+sentencepiece==0.2.0
+shapely==2.1.1
+shellingham==1.5.4
+simplejson==3.20.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.41
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.2
+tomli==2.2.1
+torch==2.7.1+cu118
+torchaudio==2.7.1+cu118
+torchvision==0.22.1+cu118
+tqdm==4.67.1
+traits==7.0.2
+transformers==4.53.3
+trec-car-tools==2.6
+typer==0.16.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+ujson==5.10.0
+unlzw3==0.2.3
+urllib3==2.5.0
+uvicorn==0.35.0
+warc3-wet==0.2.5
+warc3-wet-clueweb09==0.2.5
+watchfiles==1.1.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+xlsxwriter==3.2.5
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.23.0
+zlib-state==0.1.9
+zstandard==0.23.0
